--- a/microarray-analysis.Rmd
+++ b/microarray-analysis.Rmd
@@ -25,10 +25,15 @@ library(inSilicoMerging)
 Download GEO Raw files and unzip
 
 ```{r geo}
-getGEOSuppFiles("GSE20986")
-untar("GSE20986/GSE20986_RAW.tar", exdir="data")
-cels <- list.files("data/", pattern = "[gz]")
-sapply(paste("data", cels, sep="/"), gunzip)
+if(length(dir("Data/GEO/",pattern="GSE29617"))==0)
+{
+  getGEOSuppFiles("GSE29617", makeDirectory = TRUE, baseDir = "./Data/GEO/")
+  untar("./Data/GEO/GSE29617/GSE29617_RAW.tar", exdir="./Data/GEO/GSE29617/", tar=Sys.getenv("TAR"))
+}
+
+# (optional) gunzip
+cels <- list.files("./Data/GEO/", pattern = "[gz]")
+sapply(paste("./Data/GEO/", cels, sep="/"), gunzip)
 
 ```
 
@@ -50,3 +55,12 @@ memory.limit(size=6000)
 combinedset = merge(esetlist, method="COMBAT")
 ```
 
+When multiple probes match same gene
+* take mean of all probes matching to the gene. (http://www.inside-r.org/packages/cran/WGCNA/docs/collapseRows)
+* take the probe with the largest variance. (nsfilter from genefilter)
+
+filter off dups and affy probes
+```{r filter probes}
+
+fcombinedset <- nsFilter(combinedset, require.entrez=FALSE, require.GOBP=FALSE, require.GOCC=FALSE, require.GOMF=FALSE, require.CytoBand=FALSE, remove.dupEntrez=TRUE, var.func=IQR, var.cutoff=0.5, var.filter=FALSE, filterByQuantile=FALSE, feature.exclude="^AFFX")
+```
